[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Camera.gd" type="Script" id=1]

[node name="CameraOrigin" type="Position3D"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 5.40443, 8.69703 )
projection = 1
current = true
size = 9.0

[node name="Tween" type="Tween" parent="."]

[node name="ShakeTween" type="Tween" parent="."]

[node name="Frequency" type="Timer" parent="."]

[node name="Duration" type="Timer" parent="."]
[connection signal="timeout" from="Frequency" to="." method="onFrequencyTimeout"]
[connection signal="timeout" from="Duration" to="." method="onDurationTimeout"]
